--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: build
 
 on:
   push:
@@ -10,19 +10,29 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v3
 
-      - name: Setup
+      - name: setup xmake
         uses: xmake-io/github-action-setup-xmake@v1
         with:
           xmake-version: latest
 
-      - name: Build
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: install jinja2-cli
+        run: |
+          python -m pip install --upgrade pip
+          pip install jinja2-cli
+
+      - name: build
         run: |
           xmake
 
-      - name: Deploy
+      - name: deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: build
