--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,24 +16,19 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - name: setup xmake
-        uses: xmake-io/github-action-setup-xmake@v1
-        with:
-          xmake-version: latest
-
       - name: setup python
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
 
-      - name: install jinja2-cli
+      - name: install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install jinja2-cli
+          pip install -r requirements.txt
 
       - name: build
         run: |
-          xmake
+          python build.py
 
       - name: deploy
         uses: peaceiris/actions-gh-pages@v3
